--- a/MoaBa-iOS/MoaBa-iOS/Info.plist
+++ b/MoaBa-iOS/MoaBa-iOS/Info.plist
@@ -5,7 +5,7 @@
 	<key>UIAppFonts</key>
 	<array>
 		<string>NotoSansKR-Bold.ttf</string>
-		<string>NotoSansKR-Regular.ttf</string>
+		<string>NotoSansKR-Medium.ttf</string>
 		<string>NotoSansKR-SemiBold.ttf</string>
 	</array>
 </dict>
